Fixed bullet alignment.

--- a/views/sass/_offerings.sass
+++ b/views/sass/_offerings.sass
@@ -95,8 +95,6 @@
     .specialty
       @include col(2, 1, $margin_s, $gutter_s)
 
-  @media (min-width: 1280px)
-
   @media (min-width: 1920px)
     @include row($margin_l, $gutter_l)
     h1
