--- a/views/sass/_typography.sass
+++ b/views/sass/_typography.sass
@@ -65,7 +65,7 @@ ul, ol, li
   @extend %copy_font
   @extend %one_font
   @extend %light_font
-  padding-left: 5rem
+  margin-left: 5rem
 
 a
   text-decoration:  none
